# IAFPS

./: CMakeLists.txt  DecisionTreeClassifier.cpp  DecisionTreeClassifier.h  Ingredient.h  Instructiune.h  MainFrame.cpp  MainFrame.h  MyApp.h  README.md  Reteta.h  RetetaIngredient.h  Simplex.cpp  Simplex.h  functiiBazaDeDate.cpp  functiiBazaDeDate.h  functiiVizualizare.cpp  functiiVizualizare.h  ingrediente.db  ingredients.docx  main.cpp  retete.db  vcpkg.json
